read input from stdin and throw solution to output

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,4 @@
-all: run
+all: clean run
 
 compile: 
 	clang++ -stdlib=libc++ -std=c++11 -c *
@@ -7,7 +7,7 @@ link:	compile
 	clang++ -stdlib=libc++ -std=c++11 *o -o sudoku
 
 run: link
-	time ./sudoku
+	yes 0 | head -n 81 | ./sudoku || ( echo "BUILD FAILED"; exit 1 )
 
 clean:
 	rm -f *gch *o sudoku
